<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="294dp"
        android:layout_height="77dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/arbutus"
        android:text="@string/usa"
        android:textColor="@color/red"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/arbutus"
        android:text="@string/txt1"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="25dp"
        android:fontFamily="@font/arbutus"
        android:text="@string/txt2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="25dp"
        android:fontFamily="@font/arbutus"
        android:text="@string/txt3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/arbutus"
        android:text="@string/txt4" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="309dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:srcCompat="@drawable/flag_second" />

    <Button
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="next" />

</LinearLayout>